grammar.js
    source_file: ($) =>
      seq(optional($._nl), prec.left(listSep($._element, $._nl))),

    element_list: ($) => listSep($._element, $._nl),

    _element: ($) =>
      choice(
        $._definition,
        $._statement,
        $._standalone_label,
        $._standalone_comment,
        $._block
      ),

    _start_line: ($) => choice($._label, $._ws),

    //----------------------------------------------------------------------
    // Labels:
    //----------------------------------------------------------------------

    _name: ($) => field("name", $._identifier),

    _label_definition: ($) =>
      choice(
        seq($._label_colon, optional($._ws)),
        seq($._name, $._ws),
      ),

    // colon required with leading whitespace
    comment: ($) => choice($._comment_star, $._comment_semi, $._comment_pipe, $._positional_comment),

    _comment_semi: () => token(prec(1, /;[^\n\r]*/)),
    _comment_pipe: () => token(prec(1, /\|[^\n\r]*/)),
    _comment_star: () => token(prec(1, /\*[^\n\r]*/)),
    _positional_comment: () => token(prec(-1, /[^\n\r]+/)),

    _end_line: ($) =>
      choice(
        alias($._comment_semi, $.comment),
        alias($._comment_pipe, $.comment),
        seq(optional($._ws), alias($._comment_star, $.comment)),
        seq($._ws, alias($._positional_comment, $.comment))
      ),

    //----------------------------------------------------------------------
    // Mnemonics:
    //----------------------------------------------------------------------

    // instructions:

    _instruction_mnemonic_op: ($) =>
      alias(mnemonicChoice(instructions), $.instruction_mnemonic),
    _instruction_mnemonic_noop: ($) =>
      alias(mnemonicChoice(instructionsNoOperands), $.instruction_mnemonic),

    // directives:

    _external_definition_mnemonic: ($) =>
      alias(mnemonicChoice(["xdef", "public", "weak"]), $.directive_mnemonic),
    _external_reference_mnemonic: ($) =>
      alias(mnemonicChoice(["xref", "nref"]), $.directive_mnemonic),
    _register_definition_mnemonic: ($) =>
      alias(mnemonicChoice(["equr", "fequr"]), $.directive_mnemonic),
    _register_list_definition_mnemonic: ($) =>
      alias(
        mnemonicChoice(["equrl", "fequrl", "reg", "freg"]),
        $.directive_mnemonic
      ),
    _rs_mnemonic: ($) => alias(caseInsensitive("rs"), $.directive_mnemonic),
    _symbol_assignment_mnemonic: ($) =>
      alias(caseInsensitive("set"), $.directive_mnemonic),
    _symbol_definition_mnemonic: ($) =>
      alias(mnemonicChoice(["equ", "fequ"]), $.directive_mnemonic),

    // control:

    _conditional_mnemonic_inline: ($) =>
      alias(caseInsensitive("iif"), $.control_mnemonic),
    _macro_mnemonic: ($) => alias(caseInsensitive("macro"), $.control_mnemonic),
    _endm_mnemonic: ($) => alias(caseInsensitive("endm"), $.control_mnemonic),
    _rem_mnemonic: ($) => alias(caseInsensitive("rem"), $.control_mnemonic),
    _rept_mnemonic: ($) => alias(caseInsensitive("rept"), $.control_mnemonic),
    _endr_mnemonic: ($) => alias(caseInsensitive("endr"), $.control_mnemonic),
    _end_mnemonic: ($) => alias(caseInsensitive("end"), $.control_mnemonic),

    instruction: ($) =>
      prec.right(
        choice(
          // Instruction with operands
          seq(
            field("mnemonic", $._instruction_mnemonic_op),
            optional(seq(".", field("size", $._size))),
            seq($._ws, field("operands", $.operand_list))
          ),
          // Instruction with no operands
          seq(
            field("mnemonic", $._instruction_mnemonic_noop),
            optional(seq(".", field("size", $._size)))
          )
        )
      ),

    operand_list: ($) => listSep($._operand, $._sep),
    _operand: ($) =>
      choice($._effective_address, $.register_list, $._expression),

    _size: ($) => choice($.size, $.macro_arg),
    size: () => /[bwlsdxqBWLSDXQ]/,

    //----------------------------------------------------------------------
    // Directives:
    //----------------------------------------------------------------------

    repeat: ($) =>
      seq(
        $._start_line,
        $._rept_mnemonic,
        $._ws,
        field("count", $._expression),
        optional($._end_line),
        $._nl,
        optional(seq(field("body", $.element_list), $._nl)),
        $._start_line,
        $._endr_mnemonic,
        optional($._end_line)
      ),

    conditional: ($) =>
      seq(
        $._start_line,
        $._conditional_block_start,
        optional(
          seq(
            field("consequent", $.element_list),
            $._nl,
            optional(
              seq(
                $._conditional_block_else,
                field("alternate", $.element_list),
                $._nl
              )
            )
          )
        ),
        $._conditional_block_end,
        optional($._end_line)
      ),

    _conditional_block_else: ($) =>
      prec.dynamic(
        1,
        seq($._start_line, $._else_mnemonic, optional($._end_line), $._nl)
      ),

    _conditional_block_start: ($) =>
      seq(
        choice(
          $._conditional_expression,
          $._conditional_noop,
          $._conditional_comparison,
          $._conditional_symbol
        ),
        optional($._end_line),
        $._nl
      ),

    _conditional_block_end: ($) => seq($._start_line, $._endif_mnemonic),

    conditional_instruction: ($) =>
      seq(
        $._conditional_mnemonic_inline,
        $._ws,
        field("test", $._expression),
        $._ws,
        field("consequent", $.instruction)
      ),

    rem: ($) =>
      seq(
        $._start_line,
        $._rem_mnemonic,
        optional($._end_line),
        $._nl,
        alias(repeat(seq(repeat(/[^\n]/), $._nl)), $.comment),
        alias(/\s+erem/i, $.control_mnemonic),
        optional($._end_line)
      ),

    end: ($) =>
      prec.right(seq($._start_line, $._end_mnemonic, listSep(/.*/, $._nl))),

    macro_definition: ($) =>
      prec(
        PREC.definition,
        seq(
          choice(
            seq($._label_definition, $._macro_mnemonic),
            seq($._ws, $._macro_mnemonic, $._ws, field("name", $.symbol))
          ),
          optional($._end_line),
          $._nl,
          optional(seq(field("body", $.element_list), $._nl)),
          $._start_line,
          $._endm_mnemonic,
          optional($._end_line)
        )
      ),

    //----------------------------------------------------------------------
    // Definitions
    //----------------------------------------------------------------------

    symbol_definition: ($) =>
      prec(
        PREC.definition,
        seq(
          choice($._label_definition, $._name),
          choice(
            seq(
              "=",
              optional(seq(".", field("size", alias(/[sdxpSDXP]/, $.size)))),
              optional($._ws)
            ),
            seq(
              field("mnemonic", $._symbol_definition_mnemonic),
              optional(seq(".", field("size", alias(/[sdxpSDXP]/, $.size)))),
              $._ws
            )
          ),
          field("value", $._expression),
          optional($._end_line)
        )
      ),

    symbol_assignment: ($) =>
      prec(
        PREC.definition,
        seq(
          $._label_definition,
          $._symbol_assignment_mnemonic,
          optional($._ws),
          field("value", $._expression),
          optional($._end_line)
        )
      ),

    offset_definition: ($) =>
      prec(
        PREC.definition,
        seq(
          $._label_definition,
          $._rs_mnemonic,
          optional(seq(".", field("size", $._size))),
          $._ws,
          field("length", $._expression),
          optional($._end_line)
        )
      ),

    register_definition: ($) =>
      prec(
        PREC.definition,
        seq(
          $._label_definition,
          field("mnemonic", $._register_definition_mnemonic),
          optional($._ws),
          field(
            "value",
            choice(
              $.data_register,
              $.address_register,
              $.float_register,
              $.named_register
            )
          ),
          optional($._end_line)
        )
      ),

    register_list_definition: ($) =>
      prec(
        PREC.definition,
        seq(
          $._label_definition,
          field("mnemonic", $._register_list_definition_mnemonic),
          optional($._ws),
          field("value", choice($.register_list)),
          optional($._end_line)
        )
      ),

    external_definition: ($) =>
      seq(
        field("mnemonic", $._external_definition_mnemonic),
        $._ws,
        field("symbols", $.symbol_list)
      ),

    external_reference: ($) =>
      seq(
        field("mnemonic", $._external_reference_mnemonic),
        $._ws,
        field("symbols", $.symbol_list)
      ),

    //----------------------------------------------------------------------
    // Effective addresses:
    //----------------------------------------------------------------------

    _register: ($) =>
      choice(
        $.named_register,
        $.data_register,
        $.address_register,
        $.float_register
      ),

    named_register: () => choice(...registerNames.map(caseInsensitive)),

    data_register: () => /[dD][0-7]/,
    address_register: () => /[aA][0-7]/,
    float_register: () => /[fF][pP][0-7]/,

    register_list: ($) =>
      seq($._register_list_item, repeat(seq("/", $._register_list_item))),

    _register_list_item: ($) => prec(-1, choice($.register_range, $._register)),

    register_range: ($) =>
      seq(
        field("from", $._register),
        "-",
        field("to", choice($._register, $.register_number))
      ),

    _expression: ($) =>
      choice(
        $._numeric_literal,
        $.string_literal,
        $.unary_expression,
        $.binary_expression,
        $.parenthesized_expression,
        $._identifier
      ),

    binary_expression: ($) =>
      choice(
        ...binaryOperators.map((operator, i) =>
          prec.left(
            i,
            seq(
              field("left", $._expression),
              field("operator", alias(token(seq(optional(/[ \t]+/), operator, optional(/[ \t]+/))), $.operator)),
              field("right", $._expression)
            )
          )
        )
      ),

    // Literals

    decimal_literal: () =>
      prec.left(choice(/\d+/, seq(optional(/\d+/), ".", /\d+/))),

    string_literal: ($) =>
      choice(
        // Single quoted
        seq(
          "'",
          repeat(
            choice(
              prec(1, /[^'\n\\]+/), // Normal chars
              "''", // Repeat quote escape
              $._string_escape_codes
            )
          ),
          "'"
        ),
        // Double quoted
        seq(
          '"',
          repeat(choice(prec(1, /[^"\n\\]+/), '""', $._string_escape_codes)),
          '"'
        )
      ),

    _string_escape_codes: ($) =>
      choice(
        /\\[\\bfnrt"'e]/, // Single char escape codes
        /\\[0-7]+/, // Octal character code
        /\\[xX][0-9a-f]+/, // Hex charcter code
        $.macro_arg
      ),

    //----------------------------------------------------------------------
    // Identifiers
    //----------------------------------------------------------------------

    symbol_list: ($) => listSep($.symbol, $._sep),
    symbol: ($) =>
      prec.right(
        seq(repeat1(seq(optional("."), $._symbol_chars)), optional("$"))
      ),
    _symbol_chars: () => /([a-zA-Z0-9_%]|(\\?\\\.))+/,

    //----------------------------------------------------------------------
    // Misc:
    //----------------------------------------------------------------------

    _sep: () => /\s*,\s*/,
    _ws: () => /[ \t]+/,
    _nl: () => /([ \t]*(\r\n|\n|\r))+/,
  },
});

function listSep(rule, sep = ",") {
  return seq(repeat(seq(rule, sep)), rule, optional(sep));
}

function toCaseInsensitive(a) {
  var ca = a.charCodeAt(0);
  if (ca >= 97 && ca <= 122) return `[${a}${a.toUpperCase()}]`;
  if (ca >= 65 && ca <= 90) return `[${a.toLowerCase()}${a}]`;
  return a;
}

function caseInsensitive(keyword) {
  return new RegExp(keyword.split("").map(toCaseInsensitive).join(""));
}

function mnemonicChoice(options) {
  return caseInsensitive(options.join("|"));
}
